workflowr::wflow_publish("index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -47,5 +47,10 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [A new VB approach](newVB.html)
 * [Connect new VB to single SNP Bayesian analysis](newVB.ss.html)
 
+# Depletion
+
+* [Using ash for depletion](ash-depletion.html)
+
+
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
