workflowr::wflow_publish("index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -53,6 +53,9 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Using ash for depletion](ash-depletion.html)
 
+# Single cell data
+
+* [explore t test on log-transformed data](simple_transformation_simulation.Rmd)
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
