--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -47,6 +47,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [A simple approach to fine mapping](simple_mapping.html)
 * [A new VB approach](newVB.html)
 * [Connect new VB to single SNP Bayesian analysis](newVB.ss.html)
+* [selective inference on toy example](selective_inference_toy.html)
 * [selective inference with correlated variables](selective_inference.html)
 
 # Depletion
