--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,7 +13,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Null simulations with larger n=13500](ash_pi0_largern.html)
 * [NPMLE with larger n=100000](ash_npmle_big.html)
-
+* [Examine the delta operator for ash](ash_delta_operator.html)
 
 # Mash
 
