workflowr::wflow_publish("index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -48,6 +48,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [Outline of EM algorithm for fitting weighted SVD](wSVD.html)
 * [Investigation of weighted SVD for Poisson data](plra.html)
 * [Brief experiment with primePCA](primepca.html)
+* [Example of convergence problem in softimpute](softimpute_convergence_problem.html)
 
 # Finemapping
 
