--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -16,13 +16,14 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [Examine the delta operator for ash](ash_delta_operator.html)
 * [Ash on poisson data](ash_pois_bcell.html)
 
+
 # Mr Ash
 
 * [coordinate ascent and parallel version](mr_ash_sca.html)
 * [Ridge regression for trend filtering](ridge_trend_filter.html)
 * [Ridge regression via conjugate gradient](ridge_conjugate_gradient.html)
 * [mr.ash.alpha applied to changepoint problems](mr.ash.changepoint.html)
-
+* [teach myself ADMM (L1 and L0)](admm_01.html)
 
 
 
@@ -84,6 +85,8 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 # Single cell data
 
 * [explore t test on log-transformed data](simple_transform_simulation.html)
+
+
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
