--- a/analysis/ridge_eb.Rmd
+++ b/analysis/ridge_eb.Rmd
@@ -60,7 +60,7 @@ n = 100
 p = 100
 s = 1
 sb = 1
-mu= 0
+mu= .1
 
 X = matrix(0,nrow=n,ncol=n)
 for(i in 1:n){
@@ -104,18 +104,18 @@ neg_loglik = function(par,x,shat,z){
 }
 
 
-xx = (t(X.svd$u) %*% Y)/X.svd$d
+TT = (t(X.svd$u) %*% Y)/X.svd$d # what i called T above
 z = colSums(X.svd$v)
 shat = 1/X.svd$d
 lsb = seq(-10,10,length=100)
 ll = rep(0,100)
 for(i in 1:length(lsb)){
-  ll[i] = neg_loglik(lsb[i],xx,shat,z)
+  ll[i] = neg_loglik(lsb[i],TT,shat,z)
 }
 plot(lsb,ll)
 
-optim(par=0,fn=neg_loglik,x=xx,shat=shat,z=z)
-optim(par=0,fn=neg_loglik,x=xx,shat=shat,z=z,method="Brent",lower=-5,upper=5)
+optim(par=0,fn=neg_loglik,x=TT,shat=shat,z=z)
+optim(par=0,fn=neg_loglik,x=TT,shat=shat,z=z,method="Brent",lower=-5,upper=5)
 
 
 # # this is wrong.. it is partial derivative with respect to sb, keeping s fixed
@@ -140,15 +140,33 @@ optim(par=0,fn=neg_loglik,x=xx,shat=shat,z=z,method="Brent",lower=-5,upper=5)
 So we can wrap this up in a function
 ```{r}
 ebnm_normal_unknown_s = function(x,shat,z){
-  fit = optim(par=0,fn=neg_loglik,x=xx,shat=shat,z=z,method="Brent",lower=-5,upper=5)
+  fit = optim(par=0,fn=neg_loglik,x=x,shat=shat,z=z,method="Brent",lower=-5,upper=5)
   sb = exp(fit$par)
   aux = compute_w_mu_s2(sb,x,shat,z)
   return(list(sb=sb, s = sqrt(aux$s2), mu = aux$mu, loglik = -fit$value))  
 }
-ebnm_normal_unknown_s(xx,shat,z)
+fit = ebnm_normal_unknown_s(TT,shat,z)
+```
+
+# Posterior mean for $b$
+
+The posterior mean, in the case $\mu=0$ can be shown to b:
+$$E(b) = V diag(s_b^2 d_j^2/(1+s_b^2 d_j^2)) (T-\mu V'1_p) + \mu V'1_p$$
+```{r}
+shrink = fit$sb^2 * X.svd$d^2
+shrink = shrink/(1+shrink)
+
+post_mean = X.svd$v %*% (shrink*(TT-fit$mu*colSums(X.svd$v))) + fit$mu
+plot(Y)
+lines(X %*% btrue)
+lines(X %*% post_mean,col=2)
+
 ```
 
 
+## Unused Stuff
+
+The rest of this is old text that may be wrong...
 
 Looking at the terms that depend on $\mu$:
 $$l(\mu) = -0.5s^2\mu^2 x_+' \Sigma^{-1}x_+ + s \mu x_+' \Sigma^{-1}y $$
