--- a/analysis/ridge_eb.Rmd
+++ b/analysis/ridge_eb.Rmd
@@ -21,17 +21,17 @@ As a reminder, assuming $X'X$ is invertible, the OLS estimator $\hat{b}=(X'X)^{-
 $$\hat{b} \sim N(b, s^2 (X'X)^{-1})$$
 
 Assume the prior is
-$$b \sim N(s\mu 1_p,s_b^2 s^2 I_p)$$ 
-where $1_p$ is the  $p$-vector of all ones and $\mu$ is a scalar. (So we allow $b$ to have non-zero mean, for reasons I won't go into here, and we scale the prior by $s$.) 
+$$b \sim N(\mu 1_p,s_b^2 s^2 I_p)$$ 
+where $1_p$ is the  $p$-vector of all ones and $\mu$ is a scalar. So we allow $b$ to have non-zero mean, for reasons I won't go into here, and we scale the prior variance by $s$. (Note: we could also consider scaling the prior mean by $s$, so mean $s \mu$, but I have not done that here.)
 
 
 ## Marginal likelihood
 
 Putting these together we have 
-$$ y | \mu, s_b^2, s^2 \sim N(s\mu X1_p, s^2(s_b^2XX'+I_n))$$
+$$ y | \mu, s_b^2, s^2 \sim N(\mu X1_p, s^2(s_b^2XX'+I_n))$$
 
 Thus, marginalizing out $b$, the log-likelihood for $\mu, s_b,s$ is
-$$l(\mu,s_b,s) = -0.5 \log(|2\pi \Sigma|) - 0.5 (y-s\mu x_+)'\Sigma^{-1}(y-s\mu x_+)$$
+$$l(\mu,s_b,s) = -0.5 \log(|2\pi \Sigma|) - 0.5 (y-\mu x_+)'\Sigma^{-1}(y-\mu x_+)$$
 where 
 $$\Sigma = s^2(s_b^2 XX' + I_n)$$
 and $x_+ := X1_p$ are the row-sums of $X$.
@@ -39,7 +39,6 @@ and $x_+ := X1_p$ are the row-sums of $X$.
 
 ## Estimating hyperparameters
 
-Here we have changed from mean $s\mu$ to $\mu$...
 
 If $Y=Xb+E$ and $X=UDV'$ then
 $$T:=D^{-1}U'Y \sim N(\mu V'1_p, s^2(s_b^2I+D^{-2})).$$
@@ -157,8 +156,8 @@ fit = ebnm_normal_unknown_s(TT,shat,z)
 
 # Posterior mean for $b$
 
-The posterior mean, in the case $\mu=0$ can be shown to b:
-$$E(b) = V diag(s_b^2 d_j^2/(1+s_b^2 d_j^2)) (T-\mu V'1_p) + \mu V'1_p$$
+The posterior mean can be shown to be:
+$$E(b) = V diag(s_b^2 d_j^2/(1+s_b^2 d_j^2)) (T-\mu V'1_p) + \mu 1_p$$
 ```{r}
 shrink = fit$sb^2 * X.svd$d^2
 shrink = shrink/(1+shrink)
@@ -226,12 +225,12 @@ for(i in 1:9){
 ```
 
 
-So it seems that even with mu=0 we get "overfitting". This should
+So it seems that even with $\mu=0$ we get "overfitting". This should
 probably have been expected.
 
 
 
-Try fixing s2
+Try fixing s2 (with $\mu=0$)
 ```{r}
 set.seed(1)
 btrue = rep(0,100)
@@ -254,7 +253,7 @@ for(i in 1:9){
 ```
 
 
-Try fixing s2 but not mu
+Try fixing s2 but not $\mu=0$:
 ```{r}
 set.seed(1)
 btrue = rep(0,100)
@@ -277,7 +276,7 @@ for(i in 1:9){
 ```
 
 so just based on this it seems varying mu converges to a less sparse solution;
-probably a worse solution but not clear.
+probably a worse solution but not entirely clear.
 
 
 ## Unused Stuff
@@ -285,9 +284,9 @@ probably a worse solution but not clear.
 The rest of this is old text that may be wrong...
 
 Looking at the terms that depend on $\mu$:
-$$l(\mu) = -0.5s^2\mu^2 x_+' \Sigma^{-1}x_+ + s \mu x_+' \Sigma^{-1}y $$
+$$l(\mu) = -0.5\mu^2 x_+' \Sigma^{-1}x_+ + \mu x_+' \Sigma^{-1}y $$
 Differentiating, setting to 0,  we can write
-$$l'(\mu) = -s^2 \mu tr(\Sigma^{-1}x_+ x'_+) + str(\Sigma^{-1}yx'_+) $$
+$$l'(\mu) = - \mu tr(\Sigma^{-1}x_+ x'_+) + tr(\Sigma^{-1}yx'_+) $$
 
 ## log-likelihood for $b$
 
@@ -304,14 +303,13 @@ So posterior variance satisfies
 $$Var(b|Y) = [1/(s_b^2s^2) I_p+ (1/s^2)(X'X)]^{-1}$$
 $$Var(b|Y) = s^2 s_b^2 (I_p+ s_b^2(X'X))^{-1}$$
 The posterior mean for $b$ is:
-$$\bar{b} = (X'X + (1/s^2_b) I_p)^{-1}(X'y + (1/s_b^2) s\mu 1_p)$$
-or if we write $V$ for $\Var(b|Y)$ then
-$$\bar{b} = (1/s^2) V(X'y+(1/s_b^2)s\mu1_p)$$
+$$\bar{b} = (X'X + (1/s^2_b) I_p)^{-1}(X'y + (1/s_b^2) \mu 1_p)$$
+
 
 
 Alternatively, if we write in terms of $b/s$ we get
 $$Var(b/s|Y) = s_b^2 (I_p+ s_b^2(X'X))^{-1}$$
-$$E(b/s|Y) = (X'X + (1/s^2_b) I_p)^{-1}(X'(y/s) + (1/s_b^2) \mu 1_p)$$
+$$E(b/s|Y) = (X'X + (1/s^2_b) I_p)^{-1}(X'(y/s) + (1/s_b^2) (\mu/s) 1_p)$$
 
 
 
